overflow fixed

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -8,6 +8,8 @@
     flex-direction: column;
     // screen height
     min-height: 100vh;
+
+    overflow: hidden;
 }
 
 // content
